--- a/hamoye_quiz.ipynb
+++ b/hamoye_quiz.ipynb
@@ -205,6 +205,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 29523 entries, 0 to 29522\n",
+      "Data columns (total 11 columns):\n",
+      "record_id                       29523 non-null object\n",
+      "utility_id_ferc1                29523 non-null int64\n",
+      "report_year                     29523 non-null int64\n",
+      "plant_name_ferc1                29523 non-null object\n",
+      "fuel_type_code_pudl             29523 non-null object\n",
+      "fuel_unit                       29343 non-null object\n",
+      "fuel_qty_burned                 29523 non-null float64\n",
+      "fuel_mmbtu_per_unit             29523 non-null float64\n",
+      "fuel_cost_per_unit_burned       29523 non-null float64\n",
+      "fuel_cost_per_unit_delivered    29523 non-null float64\n",
+      "fuel_cost_per_mmbtu             29523 non-null float64\n",
+      "dtypes: float64(5), int64(2), object(4)\n",
+      "memory usage: 2.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -362,14 +394,14 @@
     }
    ],
    "source": [
-    "df_num_corr = df_num.corr()['fuel_cost_per_unit_burned'][:-1]\n",
-    "golden_features_list = df_num_corr[abs(df_num_corr)>0.5].sort_values(ascending=False)\n",
-    "print(\"There are {} correlated values with quantity of fuel burned:\\n{}\".format(len(golden_features_list),golden_features_list))"
+    "#df_num_corr = df_num.corr()['fuel_cost_per_unit_burned'][:-1]\n",
+    "#golden_features_list = df_num_corr[abs(df_num_corr)>0.5].sort_values(ascending=False)\n",
+    "#print(\"There are {} correlated values with quantity of fuel burned:\\n{}\".format(len(golden_features_list),golden_features_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1043,7 @@
        "[16675 rows x 6 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1359,7 @@
        "4624                        30.013                1.261  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,6 +1367,7 @@
    "source": [
     "df_1998 = dataset[(dataset['report_year'] == 1998)]\n",
     "df_1998_coal = df_1998[(df_1998['fuel_type_code_pudl'] == 'coal')]\n",
+    "df_1998_coal['report_year'].value_counts()\n",
     "df_1998_coal.head()"
    ]
   },
